# onegram-core

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-OGC  Dockerfile.OGC  Dockerfile.OGC.MINGW  Dockerfile.arm32v7-ubuntu-gcc  Dockerfile.arm64v8-ubuntu-gcc  Dockerfile.dev  README.md  build-docker-image.sh  docker-compose.testnet.yml  docker-compose.tests.yml  docker-compose.yml  generate_vanity_chain_id.py  genesis.json  onegram-config.ini  onegram-genesis.json  seed-nodes.h  testnet.genesis.json.in  testnet.seed-nodes.h.in  toolchain_mingw.cmake
.github/: README.md
CMakeModules/: Configuration.cmake  ExternalDependencies.cmake  Utils.cmake
CMakeModules/Legacy/: CMakeLists.txt
CMakeModules/Legacy/Python/: FindPython.cmake
libraries/: CMakeLists.txt
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  application_impl.hxx  config_util.cpp  database_api.cpp  plugin.cpp
libraries/app/include/graphene/app/: api.hpp  application.hpp  database_api.hpp
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  asset_evaluator.cpp  block_database.cpp  committee_member_evaluator.cpp  db_block.cpp  db_getter.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_notify.cpp  db_update.cpp  evaluator.cpp  exceptions.cpp  fork_database.cpp  genesis_state.cpp  proposal_evaluator.cpp  small_objects.cpp
libraries/chain/include/graphene/chain/: account_object.hpp  asset_evaluator.hpp  budget_record_object.hpp  chain_property_object.hpp  config.hpp  database.hpp  eternal_committee_members.hpp  evaluator.hpp  exceptions.hpp  feeless_accounts.hpp  fork_database.hpp  global_property_object.hpp  immutable_chain_parameters.hpp  operation_archive_object.hpp  operation_history_object.hpp  sticky_lifetime_referrers.hpp  types.hpp
libraries/chain/include/graphene/chain/protocol/: account.hpp  assert.hpp  asset_ops.hpp  balance.hpp  chain_parameters.hpp  committee_member.hpp  confidential.hpp  custom.hpp  fba.hpp  fee_schedule.hpp  htlc.hpp  market.hpp  proposal.hpp  (+8 more)
libraries/chain/protocol/: account.cpp  chain_parameters.cpp  fee_schedule.cpp  operations_permissions.cpp  proposal.cpp  transaction.cpp  transfer.cpp  types.cpp
libraries/db/include/graphene/db/: undo_database.hpp
libraries/egenesis/: CMakeLists.txt  embed_genesis.cpp  embed_genesis.py  embed_genesis_lib.py
libraries/net/: CMakeLists.txt  node.cpp  node_impl.hxx  peer_connection.cpp  peer_database.cpp
libraries/net/include/graphene/net/: config.hpp  config.hpp.in  node.hpp  peer_database.hpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/account_archive/: CMakeLists.txt  account_archive_plugin.cpp  operation_database.cpp
libraries/plugins/account_archive/include/graphene/account_archive/: account_archive_plugin.hpp  account_summary.hpp  operation_database.hpp
libraries/plugins/account_history/: account_history_plugin.cpp
libraries/plugins/elasticsearch/: CMakeLists.txt  elasticsearch_plugin.cpp
libraries/plugins/elasticsearch/include/graphene/elasticsearch/: elasticsearch_plugin.hpp
libraries/plugins/es_objects/: CMakeLists.txt  es_objects.cpp
libraries/plugins/market_history/: market_history_plugin.cpp
libraries/plugins/witness/: witness.cpp
libraries/protocol/: CMakeLists.txt  account.cpp  assert.cpp  asset_ops.cpp  chain_parameters.cpp  committee_member.cpp  confidential.cpp  custom.cpp  fee_schedule.cpp  htlc.cpp  market.cpp  operations_permissions.cpp  proposal.cpp  small_ops.cpp  transaction.cpp  transfer.cpp  types.cpp  withdraw_permission.cpp  witness.cpp  worker.cpp
libraries/protocol/include/graphene/protocol/: account.hpp  assert.hpp  asset_ops.hpp  balance.hpp  chain_parameters.hpp  committee_member.hpp  confidential.hpp  config.hpp  custom.hpp  fba.hpp  fee_schedule.hpp  htlc.hpp  market.hpp  operations_permissions.hpp  proposal.hpp  transfer.hpp  types.hpp  vesting.hpp  withdraw_permission.hpp  witness.hpp  worker.hpp
libraries/utilities/: CMakeLists.txt  elasticsearch.cpp  git_revision.cpp.in
libraries/utilities/include/graphene/utilities/: elasticsearch.hpp
libraries/wallet/: wallet.cpp
libraries/wallet/include/graphene/wallet/: reflect_util.hpp  wallet.hpp
onegram/: onegram-config.ini  onegram-genesis.json  onegram_witness
onegram/default-configs/fullnode/: config.ini  logging.ini
onegram/default-configs/public-rpc/: api_access.json  config.ini
onegram/default-configs/test/: config.ini  logging.ini
onegram/default-configs/witness/: config.ini  logging.ini
onegram/docs/: RPi.md  docker.md
programs/build_helpers/: CMakeLists.txt  cat-parts.py  member_enumerator.cpp
programs/delayed_node/: CMakeLists.txt  main.cpp
programs/genesis_util/: genesis_update.cpp
programs/js_operation_serializer/: main.cpp
programs/size_checker/: main.cpp
programs/witness_node/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/app/: main.cpp
tests/cli/: main.cpp
tests/common/: database_fixture.cpp  database_fixture.hpp
tests/fee_schedule/: feeless_accounts_tests.cpp  main.cpp  transfer_fee_calculation_tests.cpp
tests/intense/: block_tests.cpp
tests/tests/: archive_api_tests.cpp  authority_tests.cpp  basic_tests.cpp  bitasset_tests.cpp  block_tests.cpp  database_api_tests.cpp  database_tests.cpp  enforced_lifetime_referrer_tests.cpp  eternal_committee_accounts_tests.cpp  fee_tests.cpp  feeless_accounts_tests.cpp  history_api_tests.cpp  htlc_tests.cpp  market_tests.cpp  network_broadcast_api_tests.cpp  operation_database_tests.cpp  operation_tests.cpp  operation_tests2.cpp  smartcoin_tests.cpp  sticky_lifetime_referrer_tests.cpp  swan_tests.cpp  transfer_operation_fee_tests.cpp  uia_tests.cpp  wallet_tests.cpp  witness_tests.cpp
tests/vesting_balance/: coin_days_vesting_balance_tests.cpp  main.cpp
tools/build-win/: build.bat  build_boost.bat  build_cmake.bat  build_curl.bat  build_openssl.bat  build_sln.bat  fnc_check_build.bat  fnc_get_build.bat  fnc_set_build.bat  prepare_and_build.ps1  setdev.bat  setdev.lnk
tools/build-win/7Zip4Powershell/1.9.0/: 7Zip4PowerShell.psd1  PSGetModuleInfo.xml
(+1 files in other folders)
